clusters/my-cluster/infrastructure/flux-operator.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia
  namespace: flux-system
spec:
  forwardAuth:
    address: http://authelia.security.svc.cluster.local/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-web-ui
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux.xinfra.ru`)
      kind: Rule
      middlewares:
        - name: forwardauth-authelia
          namespace: flux-system
      services:
        - name: flux-operator
          port: 9080
  tls:
    options:
      name: mtls-strict
      namespace: networking
    secretName: wildcard-xinfra-ru-tls
